Update pillar.example; default to verified 4.2.0.17.089.1709 vesion

--- a/sqldeveloper/map.jinja
+++ b/sqldeveloper/map.jinja
@@ -15,7 +15,7 @@
                  'oracle:md5' : { 'sqldeveloper': 'md5=5e077af62c1c5a526055cd9f810a3ee0' },
      },
     'Windows': { 'prefix'     : 'C:\\oracle\\' ~ release ~ '\\',
-                 'tmpdir'     : 'C:\\temp\\' ~ release ~ '\\',
+                 'tmpdir'     : 'C:\\temp\\oracletmp_' ~ release ~ '\\',
                  'homes'      : 'C:\\Users\\',
                  'command'    : '\\sqldeveloper',
                  'arch'       : 'no-jre',
